--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "minesweeper-ts",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ZzCalvinzZ.github.io/minesweeper-ts",
+  "homepage": "minesweeper.calvinkcollins.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
